# workhardplay-pw-website

./: .gitignore  .gitmodules  Gemfile  Guardfile  METADATA.md  README.md  Rakefile  Vagrantfile  camel-case-it.el  copy_pictures.sh  copy_scturcture_ru_en.sh  create_project_covers.sh  generate_archive.sh  generate_events.sh  generate_instructions.sh  generate_instructions_in.sh  generate_projects_in.sh  generate_screenings.sh  generate_screenings_in.sh  instructions_report.sh  labels.yaml  package-lock.json  package.json  print_authors.sh  projects_report.sh  reorgazine_en_schedule.sh  screenings_report.sh  slimlib.rb  stack.yaml  stack.yaml.linux  stack.yaml.mac  translate_en_ru.sh  translate_ru_en.sh  workhardplay-pw.cabal
bower_components/foundation-sites/: .bower.json
bower_components/mobile-detect/: .bower.json
collective-glossary/: selfcontrol.md  social-choreography.md
config/: deploy.rb
css/: _archive-2016.scss  _archive-2017.scss  _beginning.scss  _components-2017.scss  _components-v2.scss  _index.scss  _index_2017.scss  _index_2018.scss  _index_2019.scss  _index_2020.scss  _prelude-2017.scss  _schedule.scss  app.scss  archive-2017.scss
docs/: todo.org
en/: about.md  collective-glossary.md  index.md
en/2016/: archive.slim
en/2017/: archive.slim  index.slim
en/2018/: archive.slim  index.slim
en/2019/: archive.slim  index.md  invitation.md  schedule.md  working-group.md
en/2020/: index.md  instructions.md  invitation.md  schedule.md  screenings.md  working-group.md
en/collective-glossary/: 8-bit-desire.md  affective-labour.md  alienation.md  all-to-all.md  care-virus.md  coincidance.md  collection.md  contingency.md  corridor-anomalies.md  cyberfeminism.md  dacha.md  desire.md  digital-proletariat.md  dispersed-collectivity.md  exclusion-of-non-perspective-pedestrians.md  exploitation-of-hidden-motivation.md  extensions.md  extractive-capitalism.md  from-the-future-at-the-present.md  great-stone.md  h o o o o o o w w w w w l.md  hoooooowwwwwl.md  htp.md  intimate-interfaces.md  intoxication.md  irla-an-ideal-rejection-letter-to-an-artist.md  joy-acceleration.md  left-melancholy.md  mother-machine.md  national-academy-of-sciences-as-witch.md  object.md  oriental-retromania.md  outsourcing.md  path-stop.md  pharmachoreography.md  places-of-transparency.md  political-dancefloor.md  practice-of-small-movements.md  practices-of-ourselves.md  production-drama.md  (+16 more)
en/participants/: alesia-zhitkevich.md  alexandra-novozhenova.md  alexandra-pistoletova-circumcision-of-the-boundless-flesh.md  alisa-oleva-reflections-walk.md  anastasia-vepreva-lecture-the-ideal-formulation-of-the-refusal-of-the-artist.md  anastasya-kizilova.md  andrei-karpeka-nastia-tulayeva-semicircle.md  anya-scherbyna-parasite-artist.md  apart-sensitive-antennae.md  apart.md  apparatus22-sergey-kantsedal.md  atom.md  bitchcoin-data-sabotage.md  bitchcoin-that-s-me-me-me.md  cara-tolmie.md  crii.md  daniil-bolshakov-htp-and-zone-of-offensive-opacity.md  frida-sandstrom-inburst.md  gleb-kovalsky.md  gleb-napreenko.md  ildar-iakubov.md  ju-toman-stanislav-bytiutskyi.md  karen-karnak-tае-atеh-asemic-lecture.md  karen-karnak.md  kristina-vegera-machine-of-limitless-hearing.md  lena-klabukova-be-water.md  lika-kareva-need-for-speed.md  marija-rybka-yuriy-kuzmenko-plants  marija-rybka-yuriy-kuzmenko.md  marina-maraeva-pyosball.md  marina-maraeva.md  masha-kotlyachkova-biobar.md  masha-kotlyachkova.md  mutro-art-group.md  natalia-rebelo.md  niichegodelat-helga-zinzyver-dj-set-sleeping-music.md  niichegodelat-ilya-firdman.md  niichegodelat-russkikh-zinzyver.md  oleksiy-radynski.md  pavlo-mitenko.md  (+17 more)
en/shared/: _menu.slim
js/: app.js
provisioning/: prelude.sh  user-specific.sh  whph-common-setup.sh  whph-master-build.sh  whph-master-setup.sh  whph-master-site-clean.sh  whph-master-site-watch.sh  whph-setup.sh  whph-slave-setup.sh
provisioning/resources/: zshrc
ru/: about.md  collective-glossary.md  index.md
ru/2016/: archive.slim  index.slim
ru/2017/: archive.slim  index.slim
ru/2018/: archive.slim  index.slim
ru/2019/: archive.slim  index.md  invitation.md  max-evsropov-party-of-the-dead.md  schedule.md  working-group.md
ru/2020/: index.md  instructions.md  invitation.md  schedule.md  screenings.md  working-group.md
ru/collective-glossary/: 8-bit-desire.md  affective-labour.md  alienation.md  all-to-all.md  care-virus.md  coincidance.md  collection.md  contingency.md  corridor-anomalies.md  cyberfeminism.md  dacha.md  desire.md  digital-proletariat.md  dispersed-collectivity.md  exclusion-of-non-perspective-pedestrians.md  exploitation-of-hidden-motivation.md  extensions.md  extractive-capitalism.md  from-the-future-at-the-present.md  great-stone.md  h o o o o o o w w w w w l.md  hoooooowwwwwl.md  htp.md  intimate-interfaces.md  intoxication.md  irla-an-ideal-rejection-letter-to-an-artist.md  joy-acceleration.md  left-melancholy.md  mother-machine.md  object.md  (+27 more)
scripts/: sort-participants.rkt  start_local_server.sh
src/: W7W  site.hs
templates/: _header.slim  _menu_items.slim  about.slim  archive-2016-item.slim  archive-2017-item.slim  archive-2017-page.slim  archive-2017-project-en.slim  archive-2017-project-ru.slim  archive-2017-project.slim  archive-2017-projects-list-item.slim  collective-glossary-index.slim  collective-glossary-term.slim  index-2019.slim  index-2020.slim  index-teaser-2019.slim  index-teaser-2020.slim  index.slim  instruction-2020-item.slim  instruction-2020-page.slim  instructions-2020.slim  invitation-2019.slim  invitation-2020-letter.slim  invitation-2020.slim  page.slim  schedule-2019.slim  schedule-2020.slim  schedule-day-item-2019-txt.html  schedule-day-item-2019.slim  schedule-day-item-2020-txt.html  schedule-day-item-2020.slim  schedule-day-page-2019.slim  schedule-day-page-2020.slim  schedule-event-item-2019-txt.html  schedule-event-item-2019.slim  schedule-event-item-2020-txt.html  schedule-event-item-2020.slim  schedule-event-page-2019.slim  schedule-event-page-2020.slim  schedule-item-2020.slim  schedule-place-item-2019-txt.html  (+9 more)
(+1231 files in other folders)
