name:               workhardplay-pw
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  HS-Source-Dirs:   src
  build-depends:    base == 4.*
                  , hakyll == 4.12.*
                  , hakyll-sass == 0.2.*
                  , hlibsass == 0.1.8.0
                  , data-default
                  , hsass == 0.7.0
                  , aeson
                  , bytestring
                  , string-conversions
                  , filepath
                  , MissingH
                  , binary
                  , text
                  , attoparsec
                  , mtl
                  , errors
                  , directory
                  , MissingH
                  , colour
                  , pandoc
                  , cache
                  , hashable
  ghc-options:      -threaded
  default-language: Haskell2010
